GNOME Bugzilla – Bug 763900
stack: fix warnings during GtkStack size_allocate
Last modified: 2016-03-21 15:57:26 UTC
Created attachment 324310 [details] [review] query size request of last_visible_child During transitions, we could end up warning on the console like: Gtk[17191]: WARNING: Allocating size to IdeEditorPerspective 0x14047a0 without calling gtk_widget_get_preferred_width/height(). How does the code know the size to allocate? We were not querying the size of the transition child in the process. The attached patch fixes that by performing an innocuous size request.
Review of attachment 324310 [details] [review]: looks fine for after .0